--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1 id="title">This is my title</h1>
-	<p id="text">This is my fucking text i want to animate, i dont even use lorem ipsum becaus i am pissed at the moment and dont even ask why if you are reviewing this file you might remember why i belive you will forget and if it happens what you want to happen whats not really alike to happen you wont even finish this file so who the fuck cares i hope there is no keylogger on this pc because somebody will be really scratching his head to figure out what the hell just happened. In case there are then HIIIII.</p>
+	<h1 id="title">My new Idea</h1>
+	<p id="text">So basicly, as you can see this is how its supposed to look like. Text are typing letter by letter. Some kinda of animated wish card. User can exter any text and my website will generate a webpage and give user a link. He can sent that link to someone as wish card. Ofc, user will be able to use fonts he wants, to change size, to add little stickers on which i will add eff of drawing so it looks cool like this one.</p>
 
 <script type="text/javascript" src="script.js"></script>
 </body>
